--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,6 +7,12 @@
     tools:context=".MainActivity">
 
 
+    <Button
+        android:id="@+id/button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:text="Button" />
 
     <com.google.android.material.appbar.AppBarLayout
         android:layout_width="match_parent"
@@ -22,6 +28,7 @@
 
     </com.google.android.material.appbar.AppBarLayout>
 
-
+<!--
     <include layout="@layout/content_main" />
+    -->
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
