--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -1,6 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <declare-styleable name="LoadingButton">
-<!--   TODO: create custom attributes for the view-->
+        <attr name="defaultText" format="string" />
+        <attr name="loadingText" format="string" />
+        <attr name="textColor" format="color" />
+
     </declare-styleable>
 </resources>
