--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -4,6 +4,10 @@
         <attr name="defaultText" format="string" />
         <attr name="loadingText" format="string" />
         <attr name="textColor" format="color" />
+        <attr name="defaultColor" format="color" />
+        <attr name="loadingColor" format="color" />
+        <attr name="arcColor" format="color" />
+
 
     </declare-styleable>
 </resources>
