--- a/app/src/main/res/xml/content_detail_scene.xml
+++ b/app/src/main/res/xml/content_detail_scene.xml
@@ -18,6 +18,16 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/status"
             app:layout_constraintTop_toTopOf="@+id/status" />
+        <Constraint
+            android:id="@id/file_name"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
+            android:visibility="invisible"
+            app:layout_constraintBottom_toBottomOf="@+id/file"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="@+id/download_status"
+            app:layout_constraintTop_toTopOf="@+id/file" />
     </ConstraintSet>
 
     <ConstraintSet android:id="@+id/end">
@@ -32,6 +42,16 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/status"
             app:layout_constraintTop_toTopOf="@+id/status" />
+        <Constraint
+            android:id="@id/file_name"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
+            android:visibility="visible"
+            app:layout_constraintBottom_toBottomOf="@+id/file"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="@+id/download_status"
+            app:layout_constraintTop_toTopOf="@+id/file" />
     </ConstraintSet>
 
 </MotionScene>
